--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -19,3 +19,13 @@ div {
 	margin-top: 40px;
 	margin-bottom: 40px;
 }
+
+/*.class {
+    float: left;
+    width: 110px;
+    height: 90px;
+    margin: 5px;
+}*/
+#french-fries-pic {
+	
+}
