--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
-    font-size: 20px;
+    font-size: 16px;
+    font-family: Copperplate Gothic, bold;
 	background-color: purple;
 }
 .about-me {
