--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,11 @@ img {
 		height: auto;
 	}
 }
+
+ @media screen and (max-width:480px) {
+       #main { display: none;}
+        }
+
+#myModel {
+	font-color: black;
+}
