--- a/css/main.css
+++ b/css/main.css
@@ -42,24 +42,9 @@ img {
 }
 
 #carousel-example-generic {
-	width: 1350px;
+	width: 450px;
 
 }
-
-/*@media only screen and (max-device-width: 480px), only screen and (min-device-width: 640px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 1.5) {*/
-/* iPhone only */
-/*}*/
-
-@media (max-width: 320px) {
-	#myCarousel.carousel img {
-		width: 100px;
-		height: auto;
-	}
-}
-
- @media screen and (max-width:320px) {
-       #main { display: none;}
-        }
 
 #myModel {
 	font-color: black;
@@ -67,3 +52,57 @@ img {
 .modal-body{
 	color: black;
 }
+
+/*put code from custom style*/
+
+div {
+	border-style: solid;
+	border-width: 5px;
+    border-color: aqua;
+	padding: 30px;
+}
+
+.no-borders {
+	border: 0;
+}
+
+
+.container {
+	border-color: aqua;
+    
+}
+
+.row {
+	border-color: aqua;
+}
+
+.list-group-item {
+	border: 0;
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+/*.class {
+    float: left;
+    width: 110px;
+    height: 90px;
+    margin: 5px;
+}*/
+#french-fries-pic {
+	
+}
+
+
+@media (max-width: 320px) {
+     /*  #carousel-example-generic {
+       	width: 100%;
+       }*/
+       body {
+       	background-color: lime;
+       }
+       .tab-section {
+	
+		}
+ }
+
+
